--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "ng-countdown",
   "version": "1.0.1",
   "homepage": "https://github.com/KimSunWook/ngCountdown",
-  "main": ["ngCountdown.js", "ngCountdown.min.js"],
+  "main": [
+    "ngCountdown.js"
+  ],
   "authors": [
     "Kim Sun Wook <sunus7@naver.com>"
   ],
@@ -47,8 +49,5 @@
     "reset.css": "^1.0.2",
     "granim": "^1.1.0",
     "ng-gradient": "ngGradient#^1.0.1"
-  },
-  "resolutions": {
-    "angular": "~1.5.8"
   }
 }
